--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,8 +16,14 @@ img {
   max-width: 100%;
 }
 
+.body{
+  font-family: "Helvetica";
+  color: #E5F4D3;
+}
+
 
 .btn{
-  height: 60px;
-  width: 200px;
+  font-size: 20px;
+  height: 200px;
+  width: 100%;
 }
