--- a/css/app.css
+++ b/css/app.css
@@ -5766,8 +5766,13 @@ button.close {
 img {
   max-width: 100%; }
 
+.body {
+  font-family: "Helvetica";
+  color: #E5F4D3; }
+
 .btn {
-  height: 60px;
-  width: 200px; }
+  font-size: 20px;
+  height: 200px;
+  width: 100%; }
 
 /*# sourceMappingURL=app.css.map */
